# acg

./: .gitignore  .gitmodules  Cargo.toml
acg-amqtypes/src/: game_data.rs  lib.rs  links.rs  quiz.rs
acg-bot/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  Dockerfile.dockerignore
acg-bot/acg-bot/: Cargo.toml
acg-bot/acg-bot/src/: bot.rs  filters.rs  main.rs
acg-bot/amq-bot/: Cargo.toml
acg-bot/amq-bot/src/: error.rs  token.rs
acg-bot/amq-bot/src/client/: room_browser.rs
acg-bot/public/: connect.html
acg-bot/sappho-bot/src/: lib.rs
acg-bot/socketio/src/: error.rs  lib.rs
acg-bot/socketio/src/engineio/: packet.rs  transport.rs
acg-bot/src/: bot.rs  filters.rs  main.rs
acg-chokotan-bot/: Cargo.toml
acg-chokotan-bot/src/: audio.rs  bot.rs  client.rs  error.rs  lib.rs  quiz.rs  voice.rs
acg-chokotan-bot/src/client/: commands.rs  hooks.rs
acg-chokotan-bot/src/client/commands/: quiz.rs  songs.rs
acg-chokotan-bot/src/client/messages/: mod.rs  play_song.rs  sa_quiz.rs
acg-database/: Cargo.toml
acg-database/queries/: get_random_song.sql  pg_insert_anime_names.sql  pg_insert_anime_tags.sql  pg_insert_song.sql  pg_update_guess_rate.sql  query_song.sql  search_songs.sql
acg-database/src/: database.rs  error.rs  lib.rs  song.rs  stats.rs
acg-site/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  fly.toml
acg-site/acg-site-app/: Cargo.toml
acg-site/acg-site-app/queries/: guess_rate_difficulty.sql  guess_rate_difficulty_ntile.sql  guess_rate_vintage.sql
acg-site/acg-site-app/src/: error.rs  filters.rs  main.rs  reply.rs  song.rs  stats.rs
acg-site/public/: connect.html  post.html  search.html  search.js  stats.html  stats.js  style.css
acg-site/queries/: guess_rate_difficulty_ntile.sql  guess_rate_vintage.sql
acg-site/src/: filters.rs  main.rs  reply.rs  song.rs  stats.rs
acg-songartist/: Cargo.toml
acg-songartist/examples/: cli-test-rodio-file.rs  cli-test.rs
acg-songartist/src/: error.rs  lib.rs
acg-songartist/src/quiz/: guess.rs  mod.rs  settings.rs
acg-songartist/src/quiz/guess/: edit.rs
acg-stream-song/: Cargo.toml
acg-stream-song/src/: cancel.rs  error.rs  extrait.rs  lib.rs  song.rs  stream.rs
amq-bot/: Cargo.toml
amq-bot/socketio/: Cargo.toml
amq-bot/socketio/src/: engineio.rs  packet.rs
amq-bot/src/: client.rs  lib.rs
amq-bot/src/client/: events.rs  lobby.rs  quiz.rs  social.rs
amq-types/: Cargo.toml
amq-types/src/: game_data.rs  lib.rs  links.rs  quiz.rs
chokotan-bot/: .dockerignore  .gitignore  Cargo.toml
chokotan-bot/src/: audio.rs  bot.rs  client.rs  error.rs  lib.rs  util.rs  voice.rs
chokotan-bot/src/client/: commands.rs  hooks.rs
chokotan-bot/src/client/commands/: general.rs  quiz.rs  songs.rs
chokotan-bot/src/client/commands/quiz/: config.rs  settings.rs
chokotan-bot/src/client/messages/: mod.rs  play_song.rs  sa_quiz.rs
chokotan-bot/src/quiz/: mod.rs  settings.rs
chokotan-bot/src/quiz/config/: mod.rs  params.rs
database/: Cargo.toml
database/queries/: get_karaoke_song.sql  get_song_from_url.sql  pg_insert_anime.sql  pg_insert_song.sql  pg_insert_song_plays.sql  pg_update_song.sql
database/src/: database.rs  error.rs  lib.rs  song.rs  stats.rs  types.rs
sappho-bot/: Cargo.toml
sappho-bot/src/: bot.rs  error.rs
sappho-bot/src/bot/: commands.rs
song-artist/: Cargo.toml
song-artist/src/: lib.rs
song-artist/src/quiz/: guess.rs  mod.rs  settings.rs
song-artist/src/quiz/guess/: edit.rs
stream-song/: Cargo.toml
stream-song/src/: error.rs  extrait.rs  lib.rs  song.rs  stream.rs
