[package]
name = "song-artist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
regex = "1.9.5"
strsim = "0.10.0"
thiserror = "1.0.48"
unicode-normalization = "0.1.22"

[dependencies.database]
path = "../acg-database"

[dev-dependencies.stream-song]
path = "../acg-stream-song"

[dev-dependencies]
rodio = "0.17.1"
indicatif = "0.17.6"
tempfile = "3.8.0"
futures-util = "0.3.28"
cpal = "0.15.2"
byteorder = "1.4.3"
tokio-util = "0.7.8"

[dev-dependencies.tokio]
version = "1.32.0"
features = ["rt", "rt-multi-thread", "macros"]

[dev-dependencies.reqwest]
version = "0.11.20"
features = ["stream"]
