[package]
name = "amq-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
socketio = { path = "../socketio" }
log = "0.4.18"
tokio-stream = "0.1.14"
stream_throttle = "0.4.0"
itertools = "0.10.5"
amq-types = { path = "../../acg-amqtypes" }
