[package]
name = "acg-site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.21"
thiserror = "1.0.40"
warp = { version = "0.3.5", features = ["compression"] }
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
database = { path = "../../acg-database" }
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.18"
