[package]
name = "socketio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bytes = "1.4.0"
futures = "0.3.28"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
smallvec = "1.10.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio-util = "0.7.8"
url = "2.3.1"
